[package]
name = "remark-log"
version = "0.1.0"
authors = [" <>"]
edition = "2018"

[dependencies]
atoi = "0.3"
byteorder = "1.3"
cast = "0.2"
crc = "1.8"
env_logger = "0.6"
failure = "0.1"
failure_derive = "0.1"
fs2 = "0.4"
if_chain = "0.1"
itertools = "0.8"
libc = "0.2"
log = "0.4"
matches = "0.1"
memmap = "0.7"
parking_lot = "0.7"
static_assertions = "0.3"

[dev-dependencies]
backtrace = "0.3"
bytes = "0.4"
criterion = "0.2"
env_logger = "0.6"
measure_time = "0.6"
mktemp = "0.3"
rand = "0.6"
rusty-fork = "0.2"

[[bench]]
name = "bench"
harness = false