[package]
name = "remark-log"
version = "0.1.0"
authors = ["Dmytro Lysai <d@emphased.net>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
remark-common = { path = "../common" }

byteorder = "1.3"
cast = "0.2"
chrono = "0.4"
enum-primitive-derive = "0.1"
failure = "0.1"
failure_derive = "0.1"
fs2 = "0.4"
humantime = "1.2"
if_chain = "0.1"
itertools = "0.8"
libc = "0.2"
log = "0.4"
lz4 = "1.23"
matches = "0.1"
memmap = "0.7"
num-integer = "0.1"
num-traits = "0.2"
parking_lot = "0.7"
static_assertions = "0.3"
twox-hash = "1.1"
zstd = "0.4"

[dev-dependencies]
assert_matches = "1.3"
backtrace = "0.3"
bytes = "0.4"
criterion = "0.2"
env_logger = "0.6"
lazy_static = "1.2"
measure_time = "0.6"
mktemp = "0.3"
rand = "0.6"
rand_xorshift = "0.1.1"
rayon = "1.0"
rusty-fork = "0.2"

[[bench]]
name = "bench"
harness = false