[package]
name = "remark-server"
version = "0.1.0"
authors = ["Dmytro Lysai <d@emphased.net>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
remark-common = { path = "../common" }
remark-log = { path = "../log" }
remark-proto = { path = "../proto" }

byteorder = "1.3"
bytes = "0.4"
crossbeam-utils = "0.6"
env_logger = "0.6"
failure = "0.1"
failure_derive = "0.1"
if_chain = "0.1"
log = "0.4"
jemallocator = "0.1"
measure_time = "0.6"
num-traits = "0.2"
parking_lot = "0.7"
prost = "0.4"
signal-hook = "0.1"
threadpool = "1.7"
uuid = { version = "0.7", features = ["v4"] }